<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="?themePrimary"

    tools:context=".ui.fragmentcountrydetails.FragmentCountryDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/country_details_tv_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingExtra="10dp"
                android:textAlignment="viewStart"
                android:textColor="?themeContentTextColor"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country_details_cardview"
                app:layout_constraintVertical_bias="1.0">

            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/country_details_cardview"
                style="@style/CountrySelector.Card"
                app:layout_constraintBottom_toBottomOf="@id/country_details_barrier"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/country_details_card_iv_flag"
                        android:layout_width="100dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="32dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.8"
                        app:layout_constraintStart_toEndOf="@+id/country_details_card_barrier"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>

                    <TextView
                        android:id="@+id/country_details_card_tv_country"
                        style="@style/CountrySelector.HeaderTextView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="?themeContentTextColor"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/country_details_card_barrier"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>

                    <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/country_details_card_barrier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="right"
                        app:constraint_referenced_ids="country_details_card_tv_country"
                        tools:layout_editor_absoluteX="174dp"
                        tools:layout_editor_absoluteY="78dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/country_details_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="country_details_cardview" />

            <ViewStub
                android:id="@+id/country_details_view_stub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inflatedId="@+id/error_card"
                android:layout="@layout/layout_error_card"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/country_details_barrier">

            </ViewStub>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/country_details_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="?themeAccent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ProgressBar>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/country_details_display_countries_fab"
        style="@style/CountrySelector.GlobeFloatingActionButton"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="40dp" />



</androidx.constraintlayout.widget.ConstraintLayout>