<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    android:layout_marginBottom="32dp"

    tools:context=".ui.dialogfragmentcountrylist.DialogFragmentCountryList">

    <TextView
        android:id="@+id/tv_countries_header"
        style="@style/CountrySelector.HeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/pick_a_country" />

    <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
        android:id="@+id/country_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_countries_header"
        app:fastScrollPopupBgColor="?themePrimaryDark"
        app:fastScrollPopupTextColor="?themeContentTextColor"
        app:fastScrollThumbColor="?themeAccent">

    </com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView>


</RelativeLayout>