...


    <TextView
        android:id="@+id/pick_country_tv_button_action"
        style="@style/CountrySelector.HeaderTextView"
        android:text="@string/fragment_pick_country_button_action"
        app:layout_constraintEnd_toEndOf="@+id/pick_country_display_countries_fab"
        app:layout_constraintStart_toStartOf="@+id/pick_country_display_countries_fab"
        app:layout_constraintTop_toBottomOf="@+id/pick_country_display_countries_fab" />

    <TextView
        android:id="@+id/pick_country_tv_explanation"
        style="@style/CountrySelector.ExplanationTextView"
...
